syntax = "proto3";

import "google/protobuf/timestamp.proto";

package tags;

option go_package = "github.com/DKhorkov/hmtm-toys/api/protobuf/toys;toys";


service TagsService {
  rpc GetTag(GetTagRequest) returns (GetTagResponse) {}
  rpc GetTags(GetTagsRequest) returns (GetTagsResponse) {}
}

message GetTagRequest {
  string requestID = 1;
  uint32 ID = 2;
}

message GetTagsRequest {
  string requestID = 1;
}

message GetTagResponse {
  uint32 ID = 1;
  string name = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp updatedAt = 4;
}

message GetTagsResponse {
  repeated GetTagResponse tags = 1;
}
